--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "@paysera/fork-payment": "^2.3.0",
     "node.extend": "~1.1.3",
-    "qj": "^2.0.0",
-    "payment": "^2.3.0"
+    "qj": "^2.0.0"
   }
 }
