--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card",
+  "name": "@paysera/fork-card",
   "version": "2.4.1",
   "author": "Jesse Pollak <jpollak92@gmail.com>",
   "description": "Card lets you add an interactive, CSS3 credit card animation to your credit card form to help your users through the process.",
